--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Ignore node_modules folder
-node_modules/
+Backend/node_modules/
 
 # Ignore Data folder
-Data/
+Backend/Data/
+
+#Ignore env folder
+Backend/.env
