--- a/FrontPage/package.json
+++ b/FrontPage/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "firebase": "^11.7.1",
     "framer-motion": "^11.18.1",
-    "next": "15.1.5",
+    "next": "^15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
