--- a/FrontPage/package.json
+++ b/FrontPage/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.8.4",
     "firebase": "^11.7.1",
     "framer-motion": "^11.18.1",
+    "lucide-react": "^0.515.0",
     "next": "^15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
