--- a/FrontPage/package.json
+++ b/FrontPage/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
