--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^13.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
-    "nodemailer": "^6.10.0"
+    "multer": "^2.0.2",
+    "nodemailer": "^6.10.0",
+    "streamifier": "^0.1.1"
   }
 }
