--- a/FrontPage/package.json
+++ b/FrontPage/package.json
@@ -16,6 +16,7 @@
     "next": "^15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.4.0",
     "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.6.0"
